--- a/index.css
+++ b/index.css
@@ -1,19 +1,20 @@
 * {
+    margin: 0;
+    padding: 0;
     --tw-bg-opacity: 1;
     background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Ubuntu Mono',monospace;
+    font-family: 'Ubuntu Mono', monospace;
+    min-height: 100vh;
+}
 
-}
-h1{
+h1 {
     font-size: 1rem;
-    
 }
+
 .container {
     max-width: 42rem;
     margin: 0 auto;
@@ -41,20 +42,22 @@ a {
 ul {
     list-style: none;
 }
-p{
+
+p {
     color: rgb(43, 56, 73);
     line-height: 1.5;
     font-size: 1.125rem;
 }
 
 /*#################*/
-.intro > h1 {
+.intro>h1 {
     font-size: 2.25rem;
     line-height: 2.5rem;
     margin-bottom: 1rem;
-    
+
 }
-.intro #subtitle{
+
+.intro #subtitle {
     display: block;
     font-size: 1.5rem;
     font-weight: 400;
@@ -62,7 +65,7 @@ p{
     color: rgba(100 116 139)
 }
 
-.button{
+.button {
     display: inline-block;
     margin-top: 2rem;
     background-color: black;
@@ -92,31 +95,66 @@ nav {
     gap: 1rem;
 }
 
-.nav-links{
+.nav-menu {
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+}
+.nav-item a{
+    color: black;
+    text-decoration: none;
+}
+
+
+.menu-icon {
     display: none;
-
-}
-
-.nav-links li{
-    display: inline-block;
-    
-}
-
-.menu-icon{
     width: 24px;
     height: 24px;
+    cursor: pointer;
 }
 
-@media (min-width:768px) {
+
+@media screen and (max-width:768px){
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 0;
+        background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        transition: 0.3s;
+        padding-top: 4rem;
+        z-index: 10;
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+    .nav-item{
+        margin: 1.5rem 0;
+    }
+
+    .menu-icon{
+        display: block;
+        position: fixed;
+        top: 2rem;
+        right: 1rem;
+        z-index: 100;
+    }
+    
+}
+@media (min-width:769px) {
     header {
         padding-top: 4rem;
     }
-    .menu-icon{
+
+    .menu-icon {
         display: none;
     }
-    .nav-links{
+
+    .nav-menu {
         display: flex;
-        gap: 1rem;
-        list-style: none;
     }
-}
+} 
