about section first part

--- a/index.css
+++ b/index.css
@@ -11,10 +11,6 @@ body {
     min-height: 100vh;
 }
 
-h1 {
-    font-size: 1rem;
-}
-
 .container {
     max-width: 42rem;
     margin: 0 auto;
@@ -33,6 +29,15 @@ section {
 
 /*###############----------------TYPOGRAPHY--------------#####################*/
 
+
+h2{
+    font-weight: 600;
+    color: grey;
+    margin-bottom: 0.75rem;
+}
+.logo {
+    font-size: 1rem;
+}
 
 a {
     text-decoration: none;
@@ -75,6 +80,11 @@ p {
     border-radius: 9999px;
 }
 
+.title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
 /*###SCREEN###*/
 
 
@@ -100,7 +110,8 @@ nav {
     gap: 1rem;
     list-style: none;
 }
-.nav-item a{
+
+.nav-item a {
     color: black;
     text-decoration: none;
 }
@@ -114,8 +125,8 @@ nav {
 }
 
 
-@media screen and (max-width:768px){
-    .nav-menu{
+@media screen and (max-width:768px) {
+    .nav-menu {
         position: fixed;
         left: -100%;
         top: 0;
@@ -129,22 +140,24 @@ nav {
         z-index: 10;
     }
 
-    .nav-menu.active{
+    .nav-menu.active {
         left: 0;
     }
-    .nav-item{
+
+    .nav-item {
         margin: 1.5rem 0;
     }
 
-    .menu-icon{
+    .menu-icon {
         display: block;
         position: fixed;
         top: 2rem;
         right: 1rem;
         z-index: 100;
     }
-    
+
 }
+
 @media (min-width:769px) {
     header {
         padding-top: 4rem;
@@ -157,4 +170,4 @@ nav {
     .nav-menu {
         display: flex;
     }
-} 
+}
